# random_coding_challenge

./: Makefile  README.md  pyproject.toml
ascot_random_coding_challenge/: challenge_01.py
random_coding_challenge/: __main__.py  adhoc_01.py  challenge_01.py  challenge_02.py  challenge_03.py  challenge_04.py  challenge_05.py  challenge_06.py
random_coding_challenge/data/: 04_input.txt
tests/: data.py  test_adhoc_01.py  test_challenge_01.py  test_challenge_02.py  test_challenge_03.py  test_challenge_04.py  test_challenge_05.py  test_challenge_06.py
