[tool.poetry]
name = "random-coding-challenge"
version = "0.1.0"
description = ""
authors = ["Gareth Maddock <9137502+gtm19@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "random_coding_challenge"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.0"
requests = "^2.31.0"
pandas = "^2.0.3"
scipy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
